--- a/opmaak/evenementenoverzicht.css
+++ b/opmaak/evenementenoverzicht.css
@@ -150,6 +150,14 @@ p{
   margin-top: 100px;
 }
 
+.margin2{
+  margin-top: 50px;
+}
+
+.margin3{
+  margin-top: 90px;
+}
+
 /*Opmaak div evenementen tech for health*/
 #evenementtechforhealth{
   background-color: #C1C5CE;
